# garmin-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: docker-compose.yml
.github/workflows/: codeql.yml
docker/: Dockerfile  garmin-proj.hcl  garmin-project-compose.yml
garmin_reader_app/config/: input_output_config.yaml
garmin_reader_app/src/: main.py
garmin_reader_app/src/data_processing/: data_mapping.py  data_processing.py
garmin_reader_app/src/fit_file_reader/: data_processing.py
garmin_reader_app/src/garmin_fit_sdk/: __init__.py  accumulator.py  bitstream.py  crc_calculator.py  decoder.py  fit.py  profile.py  stream.py  util.py
src/: main.py
src/fit-file-reader/: reader.py
src/fit_file_reader/: data_processing.py
src/garmin_fit_sdk/: hr_mesg_utils.py
