# FILEPATH: /v:/github-repos/garmin-project/pyproject.toml

# Project metadata
[tool.poetry]
name = "garmin-project"
description = "A project to analyze Garmin devices' data capture"
version = "0.0.1"
author = "Francis Rodrigues"

# Project dependencies
[tool.poetry.dependencies]
python = "^3.11"
garmin-fit-sdk = "^21.10.00"
fit-tool = "^0.1.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
cartopy = "^0.22.0"
fitparse = "^1.2.0"
mapclassify = "^2.5.0"
fiona = "^1.8.20"
pyproj = "^3.3.1"
rtree = "^0.9.7"
geopy = "^2.2.0"
geoalchemy2 = "^0.10.1"
shapely = "^1.8.0"
geopandas = "^0.10.2"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
redis = "^3.5.3"
jupyter = "^1.0.0"
gmaps = "^0.9.0"

# Build system configuration
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Code formatting configuration
[tool.black]
line-length = 240
target-version = ["py311"]

# Pylint configuration
[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
max-line-length = 240
disable = [
    "invalid-name",
    "duplicate-code",
]
